[gd_scene load_steps=8 format=3 uid="uid://c30as4hbwqhmx"]

[ext_resource type="Script" path="res://Scripts/Objects/GelWell.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://gm3hb5qisvlk" path="res://Images/Not Allowed Symbol.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dx6dranr175q4" path="res://Images/Green Gunk.png" id="3"]

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(22, 30)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(22, 9)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(22, 10)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(22, 11)

[node name="GelWell" type="RigidBody2D" groups=["Container", "GelWell", "LabObjects"]]
collision_layer = 2
input_pickable = true
gravity_scale = 0.0
can_sleep = false
script = ExtResource("1")

[node name="OverallCollision" type="CollisionShape2D" parent="."]
shape = SubResource("5")

[node name="HighArea" type="Area2D" parent="."]
position = Vector2(0, -10.5)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighArea"]
shape = SubResource("6")

[node name="AddedHighVisual" type="Node2D" parent="HighArea"]
visible = false

[node name="Sprite2" type="Sprite2D" parent="HighArea/AddedHighVisual"]
position = Vector2(1, -20.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")

[node name="MidArea" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidArea"]
shape = SubResource("8")

[node name="AddedMidVisual" type="Node2D" parent="MidArea"]
visible = false

[node name="Sprite2" type="Sprite2D" parent="MidArea/AddedMidVisual"]
position = Vector2(0, -10)
scale = Vector2(0.2, 0.3)
texture = ExtResource("3")

[node name="LowArea" type="Area2D" parent="."]
position = Vector2(0, 9.5)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowArea"]
shape = SubResource("7")

[node name="AddedLowVisual" type="Node2D" parent="LowArea"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="LowArea/AddedLowVisual"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2")

[node name="Sprite2" type="Sprite2D" parent="LowArea/AddedLowVisual"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")
